src/bootstrap/test/v0_5/rejects/13_orphan_reject/main.zg
import "util"
import "other"

impl util.T for other.S {
    pub fn ping() -> int {
        return 0
    }
}
